# pocketai-bot

./: .env.example  .gitattributes  Procfile  Procfile_new  README.md  lc_openai.py  makefile  pyproject.toml  pytest.ini  requirements.txt  webhook_url.txt
.github/workflows/: ci-cd.yml  ggshield.yml  unified_ci_cd  unified_ci_cd.yml  unified_workflow.yml
ai_on_the_go/: basic_setup.py  bot.py  credentials.py  db.py  llm_integration.py  requirements.txt  some-file.txt  test_groq_api.py  utils.py  webhook_url.txt  webhook_utils.py
ai_on_the_go/markdown/: new_message1.md  new_message2.md  start_message.md
env_var_setup/: env.py
env_vars_setup/: env.py
git_hooks/: pre-push
scripts/: setup-hooks.sh
sql/: conversations_table.sql  create_schemas.sql  insert_test_data.sql  messages_table.sql  test_query.sql  users_table.sql
tests/: mock_payload
tests/integration/: test_integrations.py
tests/unit/: test_bot_handlers.py
