[tool.poetry]
name = "ai-on-the-go"
version = "0.1.0"
description = ""
authors = ["Alexander Zuev <azuev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-telegram-bot = "^21.1.1"
requests = "^2.31.0"
langchain-openai = "^0.1.4"
langchain = "^0.1.17"
langchain-groq = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
