[tool.poetry]
name = "ai-on-the-go"
version = "0.1.0"
description = ""
authors = ["Alexander Zuev <azuev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-telegram-bot = "^21.1.1"
requests = "^2.31.0"
langchain-openai = "^0.1.4"
langchain = "^0.1.17"
langchain-groq = "^0.1.3"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
flake8 = "^7.0.0"
black = "^24.4.2"
autopep8 = "^2.1.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120  # Extends the default line length for better readability on modern displays
include = '\.pyi?$'  # Includes .py and .pyi files
exclude = '''
/(
    \.git|
    \.venv|
    \.env|
    \.mypy_cache|
    \.pytest_cache|
    __pycache__|
    build|
    dist
)/
'''  # Excludes directories where formatting is unnecessary

[tool.flake8]
max-line-length = 120
ignore = "E203, E501, W503, E302"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "docs",
    "node_modules"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
